syntax = "proto3";

package article_proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./;article_proto";

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  google.protobuf.Timestamp created_date = 5;
  google.protobuf.Timestamp updated_date = 6;
  string status = 7;
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
  string category = 3;
  string status = 4;
}

message UpdateArticleRequest {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string status = 5;
}

message GetArticleByIdRequest {
  string id = 1;
}

message GetArticleResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string category = 4;
  string status = 5;
}

message DeleteArticleRequest {
  string id = 1;
}

message GetArticlesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetArticlesResponse {
  int32 total = 1;
  repeated GetArticleResponse data = 2;
}

service articleService {
  rpc GetArticles(GetArticlesRequest) returns (GetArticlesResponse);
  rpc CreateArticle(CreateArticleRequest) returns (Post);
  rpc GetArticleById(GetArticleByIdRequest) returns (GetArticleResponse);
  rpc UpdateArticleById(UpdateArticleRequest) returns (Post);
  rpc DeleteArticleById(DeleteArticleRequest) returns (google.protobuf.Empty);
}